<resources>
    <string name="app_name">Calculator_TC</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_plus">+</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_minus">-</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_mult">*</string>
    <string name="key_zero">0</string>
    <string name="key_dot">.</string>
    <string name="key_divide">/</string>
    <string name="key_log">Log</string>
    <string name="key_sqrt">SQRT</string>
    <string name="key_pow">POW</string>
    <string name="key_percent">%</string>
    <string name="theme_one">Theme_one</string>
    <string name="theme_two">Theme two</string>
    <string name="theme_three">Theme tree</string>
    <string name="theme_four">Theme four</string>
</resources>