<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:padding="@dimen/default_padding"
    tools:context=".ui.CalculatorActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/result_size"
        android:gravity="end"
        android:paddingVertical="@dimen/default_padding"
        tools:text="433"/>
    <Button
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_1"/>

    <Button
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_2"/>
    <Button
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_3"/>
    <Button
        android:id="@+id/key_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_plus"/>
    <Button
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_4"/>
    <Button
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_5"/>
    <Button
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_6"/>
    <Button
        android:id="@+id/key_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_minus"/>
    <Button
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_7"/>
    <Button
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_8"/>
    <Button
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_9"/>
    <Button
        android:id="@+id/key_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_mult"/>
    <Button
        android:id="@+id/key_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_columnSpan="2"
        android:text="@string/key_zero"/>
    <Button
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_dot"/>
    <Button
        android:id="@+id/key_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/key_divide"/>



</GridLayout>